# micro-logger

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md
backport/: CMakeLists.txt  micro_logger.cpp
cmake/: gtest_wrapper.cmake  micro_logger.cmake.in  other_tests.cmake
demos/: demo.cpp
includes/: micro_logger.h  micro_logger.hpp  micro_logger_custom_paramters.h  micro_logger_tools.h  micro_logger_tools.hpp  micro_logger_writer.h  micro_logger_writer.hpp
micro_logger/: CMakeLists.txt
micro_logger++/: CMakeLists.txt
micro_logger++/demos/: benchmark.cpp  demo.cpp
micro_logger++/include/: micro_logger.hpp  micro_logger_custom_paramters.h  micro_logger_tools.hpp  micro_logger_writer.hpp
micro_logger++/include/micro_logger/: micro_logger.hpp  micro_logger_custom_parameters.h  micro_logger_tools.hpp  micro_logger_writer.hpp
micro_logger++/src/: hex.cpp  micro_logger.cpp  micro_logger_writer.cpp  thread_info.cpp  thread_info.h
micro_logger++/tests/: common.h  test_custom_parameters.cpp  test_hex.cpp  test_pattern.cpp  test_to_string.cpp
micro_logger/demos/: demo.c
micro_logger/include/: micro_logger.h
micro_logger/include/micro_logger/: micro_logger.h
micro_logger/src/: micro_logger.cpp
package/: PKGBUILD  micro_logger.pc  micro_logger.pc.in
src/: hex.cpp  micro_logger.cpp  micro_logger_writer.cpp  thread_info.cpp  thread_info.h
tests/: benchmark.cpp  common.py  demo.cpp  demo_c.c  main.cpp  main_c.c  test_cdemo.py  test_cppdemo.py  test_hex.cpp  test_library.py  test_log_via_network.py
tests/common/: __init__.py  benchmark_value.py  custom_popen.py  data_handler.py  file_handler.py  network_server.py  path_to_object.py  utilities.py
